--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -49,7 +49,7 @@ h4,
   display: inline-block;
   vertical-align: middle;
   border-bottom: 1px solid #7253ed33;
-  padding: 10px 5px 5px 5px;
-  background-color: adjust-color($alpha: 0.5);
+  padding: 10px 10px 5px 10px;
+  background-color: #eeeeee55;
   box-shadow: 0px 15px 10px -15px #7253ed55;
 }
