--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -50,6 +50,8 @@ h4,
   vertical-align: middle;
   border-bottom: 1px solid #7253ed33;
   padding: 10px 10px 5px 10px;
-  background-color: #eeeeee55;
+  background-color: #fafafa;
   box-shadow: 0px 15px 10px -15px #7253ed55;
+  border-radius: 5px 5px 0px 0px;
+  text-align: justify;
 }
