--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -41,17 +41,12 @@ h4,
   font-size: 1rem;
 }
 
-/* Stat blocks */
+/* Stat blocks was #7253ed #5c5962 */
 
 .stat-block {
-  text-align: left;
-  margin: 5px;
-  display: inline-block;
   vertical-align: middle;
-  border-bottom: 1px solid #7253ed33;
-  padding: 10px 10px 5px 10px;
-  background-color: #fafafa;
-  box-shadow: 0px 15px 10px -15px #7253ed55;
-  border-radius: 5px 5px 0px 0px;
+  padding: 2px 2px 2px 7px;
+  border-image: linear-gradient(0.25turn, #7253ed, #ffffff) 1;
+  border-bottom: solid 1px;
   text-align: justify;
 }
